--- a/Code/workshop-code.qmd
+++ b/Code/workshop-code.qmd
@@ -83,3 +83,55 @@ Turn off the 2x2 grid (as a blank slate)
 ```{r turning-off-the-grid, results = FALSE}
 dev.off()
 ```
+
+## Putting things together to communicate
+
+### Model Predictions
+
+```{r pulling-out-predictions}
+predictions <- ggpredict(maples_model, terms = "stem_length")
+```
+
+Plot predictions:
+
+```{r plotting-predictions-over-data}
+plot_predictions <- ggplot(data = maples_data, aes(
+  x = stem_length, 
+  y = stem_dry_mass)) +
+    geom_point() +
+  
+    geom_line(data = predictions, aes(
+      x = x, 
+      y = predicted), 
+      color = "blue", linewidth = 1) +
+  # plot the confidence interval around model estimates
+  geom_ribbon(data = predictions, aes(x = x, y = predicted, ymin = conf.low, ymax = conf.high), alpha = 0.2)
+
+plot_predictions
+```
+
+## Create a table
+
+```{r model-summary-table}
+model_summary <- summary(maples_model)
+
+
+model_squares <- anova(maples_model)
+
+model_squares
+```
+
+## Make a table to show the info above
+
+```{r}
+model_squares_table <- tidy(model_squares) %>% 
+  mutate(p.value = case_when(
+    p.value < 0.001 ~ "<0.001"
+  )) %>% 
+  flextable() %>% 
+  set_header_labels(df = "Degrees of Freedom",
+                    sumsq = "Sum of Squares")  
+
+
+model_squares_table
+```
